Add hw7 notebook

--- a/homework07/homework07.ipynb
+++ b/homework07/homework07.ipynb
@@ -232,6 +232,35 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is known that every confex function always follows the following:\n",
+    "$0≤z≤1, f(zx+(1−z)x')≤zf(x)+(1−z)f(x')$\n",
+    "\n",
+    "So, if $b = c + d$, a compination of convex functions $c$ that outputs $C$, and $d$ that outputs $D$. If $b$ is a convex function, then the following is true:\n",
+    "$b(zx+(1−z)x') ≤ zb(x) + (1−z)b(x')$\n",
+    "\n",
+    "Thefore, knowing everything above, the following must be true as $c$ and $d$ are convex:\n",
+    "\n",
+    "$b(zx+(1−z)x') = c(zx+(1−z)x') + d(zx+(1−z)x')$\n",
+    "\n",
+    "And in general, we know that if $e < f$ and $g < h$, then $e + g < f + h$. Therefore:\n",
+    "\n",
+    "$c(zx+(1−z)x') + d(zx+(1−z)x') \\leq zc(x)+(1−z)c(x') + zd(x)+(1−z)d(x')$\n",
+    "\n",
+    "This simplifies to:\n",
+    "\n",
+    "$c(zx+(1−z)x') + d(zx+(1−z)x') \\leq z(c(x) + d(x)) + (1-z)(c(x') + d(x'))$\n",
+    "\n",
+    "Therefore, the function is equivalent to:\n",
+    "\n",
+    "$b(zx+(1−z)x')\\leq z(c(x) + d(x)) + (1-z)(c(x') + d(x'))$\n",
+    "\n",
+    "which follows the principle of every convex function as mentioned in the very beginning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": [
      "AST"
